Configure memory option of the JVM and the Box to actually be able to start Jetty